# intens

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Jenkinsfile  NEWS  README.md  docker-bake.hcl  sonar-project.properties
bitmaps/: CMakeLists.txt  bottom_left_corner.xpm  bottom_right_corner.xpm  default.xpm  intens.xpm  minus.xpm  plus.xpm  semafor.xpm  top_left_corner.xpm  top_right_corner.xpm
etc/: CMakeLists.txt  MessageQueueReply.inc  UnitManager.inc  generateHighlights.py  highlights.json  intens-mode.el  intens-ts-mode.el  intens.desktop  log4cplus.properties  ts-template-emacs.mako  ts-template-helix.mako  ts-template-vscode-textmate.mako  ts-template-vscode.mako
etc/lsp/: CMakeLists.txt  grammar.js  pyproject.toml  requirements.txt  tree-sitter.json
etc/tree-sitter-intens/: .gitignore  CMakeLists.txt  package.json
etc/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
qss/: CMakeLists.txt  HackBook.qss
qss/greyblue/: greyblue.qss
qss/metal/: metal.qss
qss/quartz/: quartz.qss
src/: CMakeLists.txt  intensres.rc  log4j.properties  main.cc  messagebox.cc  mq_push.cc  mq_request.cc
src/app/: App.cc  App.h  AppData.cc  AppData.h  CMakeLists.txt  ColorSet.cc  ColorSet.h  DataAlterGetDbModified.cc  DataAlterGetDbModified.h  DataAlterSetDbModified.cc  DataAlterSetDbModified.h  DataEventsIntens.cc  DataEventsIntens.h  DataPoolIntens.cc  DataPoolIntens.h  DataPoolUndoListener.cc  DataPoolUndoListener.h  DataSet.cc  DataSet.h  DataSetItem.h  HardCopyListener.cc  HardCopyListener.h  HelpBrowser.cc  HelpBrowser.h  HelpFile.cc  HelpFile.h  HelpHTML.cc  HelpHTML.h  HelpManager.cc  HelpManager.h  HelpText.cc  HelpText.h  HelpURL.cc  HelpURL.h  IntensInterface.cc  IntensInterface.h  ItemAttr.cc  ItemAttr.h  LSPItem.h  ModuleFactory.cc  (+20 more)
src/datapool/: CMakeLists.txt  DataAlterAssignCorrDataItem.cc  DataAlterAssignCorrDataItem.h  DataAlterAssignDataItem.cc  DataAlterAssignDataItem.h  DataAlterAssignElement.cc  DataAlterAssignElement.h  DataAlterClearDataItem.cc  DataAlterClearDataItem.h  DataAlterClearElement.cc  DataAlterClearElement.h  DataAlterCompare.cc  DataAlterCompare.h  DataAlterEraseDataItem.cc  DataAlterEraseDataItem.h  DataAlterEraseElement.cc  DataAlterEraseElement.h  DataAlterFunctor.cc  DataAlterFunctor.h  DataAlterGetAttributes.cc  DataAlterGetAttributes.h  DataAlterGetDimensionInfo.cc  DataAlterGetDimensionInfo.h  DataAlterGetDimensionSize.cc  DataAlterGetDimensionSize.h  DataAlterGetElement.cc  DataAlterGetElement.h  DataAlterGetElementUpdated.cc  DataAlterGetElementUpdated.h  DataAlterGetElementValid.cc  DataAlterGetElementValid.h  DataAlterGetItem.cc  DataAlterGetItem.h  DataAlterGetItemAttr.cc  DataAlterGetItemAttr.h  DataAlterGetItemUpdated.cc  DataAlterGetItemUpdated.h  DataAlterGetMatrix.cc  DataAlterGetMatrix.h  DataAlterGetStylesheet.cc  (+126 more)
src/gui/: CMakeLists.txt  ConfirmationListener.h  DataProcessing.cc  DataProcessing.h  DialogCompare.cc  DialogCompare.h  DialogCopyright.h  DialogFileSelection.h  DialogProgressBar.cc  DialogProgressBar.h  DialogUserPassword.cc  DialogUserPassword.h  DialogWorkClock.cc  DialogWorkClock.h  DialogWorker.cc  DialogWorker.h  FileSelectListener.h  Gui2dPlot.cc  Gui2dPlot.h  Gui3dPlot.cc  Gui3dPlot.h  GuiApplHeader.cc  GuiApplHeader.h  GuiButton.cc  GuiButton.h  GuiButtonListener.cc  GuiButtonListener.h  GuiButtonbar.cc  GuiButtonbar.h  GuiComboBox.cc  GuiComboBox.h  GuiContainer.cc  GuiContainer.h  GuiCycleButton.cc  GuiCycleButton.h  GuiCycleDialog.cc  GuiCycleDialog.h  GuiDataField.cc  GuiDataField.h  GuiDialog.cc  (+107 more)
src/job/: CMakeLists.txt  InitialWorker.cc  InitialWorker.h  JobAction.cc  JobAction.h  JobActionSimple.cc  JobActionSimple.h  JobClientSocket.cc  JobClientSocket.h  JobCodeAttrEditableCycle.cc  JobCodeAttrEditableCycle.h  JobCodeAttributes.cc  JobCodeAttributes.h  JobCodeClearTextWindow.cc  JobCodeClearTextWindow.h  JobCodeCycle.cc  JobCodeCycle.h  JobCodeData.h  JobCodeEvalAssign.cc  JobCodeEvalAssign.h  JobCodeExec.h  JobCodeExecute.cc  JobCodeExecute.h  JobCodeFile.cc  JobCodeFile.h  JobCodeItem.h  JobCodeMessages.cc  JobCodeMessages.h  JobCodeOperator.cc  JobCodeOperator.h  JobCodeOthers.cc  JobCodeOthers.h  JobCodePush.cc  JobCodePush.h  JobCodeRestService.cc  JobCodeRestService.h  JobCodeStandards.cc  JobCodeStandards.h  JobCodeTimer.cc  JobCodeTimer.h  (+63 more)
src/operator/: BatchProcess.cc  BatchProcess.h  CMakeLists.txt  Channel.cc  Channel.h  ChannelEvent.cc  ChannelEvent.h  ChannelListener.h  ClientSocket.cc  ClientSocket.h  ConnectionListener.h  DaemonProcess.cc  DaemonProcess.h  FileStream.cc  FileStream.h  InputChannelEvent.cc  InputChannelEvent.h  IntensServerSocket.cc  IntensServerSocket.h  MFMServerSocket.cc  MFMServerSocket.h  MatlabConnection.h  MatlabInitProcess.cc  MatlabInitProcess.h  MatlabProcess.cc  MatlabProcess.h  MessageQueue.cc  MessageQueue.h  MessageQueuePublisher.cc  MessageQueuePublisher.h  MessageQueueReply.cc  MessageQueueReply.h  MessageQueueRequest.cc  MessageQueueRequest.h  MessageQueueSubscriber.cc  MessageQueueSubscriber.h  MessageQueueThreads.cc  MessageQueueThreads.h  OpProcess.h  OutputChannelEvent.cc  (+30 more)
src/parser/: CMakeLists.txt  Configurator.h  Flexer.cc  Flexer.h  HMap.cc  HMap.h  IdManager.cc  IdManager.h  InterpreterConfigurator.cc  InterpreterConfigurator.h  XMLParserDocumentHandler.cc  XMLParserDocumentHandler.h  errorhandler.cc  errorhandler.h  parserlex.ll  parseryacc.yy
src/plot/: CMakeLists.txt  ConfigDialog.h  ConfigDialogListener.h  CyclesDialog.cc  CyclesDialog.h  CyclesDialogListener.h  Frame.cc  Frame.h  Gdev.cc  Gdev.h  GdevHPGL.cc  GdevHPGL.h  GdevPS.cc  GdevPS.h  GdevSVG.cc  GdevSVG.h  ListGraph.cc  ListGraph.h  ListPlot.cc  ListPlot.h  PSPlot.cc  PSPlot.h  Plot2dMenuDescription.cc  Plot2dMenuDescription.h  PlotAxis.cc  PlotAxis.h  RedisplayListener.h  ScaleDialog.cc  ScaleDialog.h  ScaleDialogListener.h  Simpel.h
src/protobuf/: Button.proto  (+31 more)
templates/: CMakeLists.txt
test/: CMakeLists.txt  gdtoa_test.cc
(+1049 files in other folders)
