# SPDX-FileCopyrightText: 2025 SEMAFOR Informatik & Energie AG, Basel
#
# SPDX-License-Identifier: Apache-2.0

### make install ###
install(
  FILES
    default.xpm
    new.png
    remove.png
    search.png
    store.png
    left.xpm
    open.png
    right.xpm
    semafor.xpm
    table_corner.png
  DESTINATION ${CMAKE_INSTALL_DATADIR}/bitmaps
)
