# needs a build system and setuptools defaults would generate an egg-info foler in the source tree
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intens-lsp"
version = "0.1.0"
description = "A language server for intens"
requires-python = ">=3.11"
dependencies = [
    "lsprotocol==2025.0.0",
    "pygls==2.0.0",
    "pyinstaller==6.19.0",
    "pyyaml==6.0.3",
    "tree-sitter==0.25.2",
]

[tool.ruff.format]
quote-style = "single"

[tool.hatch.build.targets.wheel]
packages = ["src"]
