
add_library(datapool OBJECT
        DataAlterAssignCorrDataItem.cc
        DataAlterAssignDataItem.cc
        DataAlterAssignElement.cc
        DataAlterClearDataItem.cc
        DataAlterClearElement.cc
        DataAlterCompare.cc
        DataAlterEraseDataItem.cc
        DataAlterEraseElement.cc
        DataAlterFunctor.cc
        DataAlterGetAttributes.cc
        DataAlterGetDimensionInfo.cc
        DataAlterGetDimensionSize.cc
        DataAlterGetElement.cc
        DataAlterGetElementUpdated.cc
        DataAlterGetItem.cc
        DataAlterGetItemAttr.cc
        DataAlterGetItemUpdated.cc
        DataAlterGetMatrix.cc
        DataAlterGetStylesheet.cc
        DataAlterGetVector.cc
        DataAlterLockElement.cc
        DataAlterReadJSON.cc
        DataAlterReadRapidJSON.cc
        DataAlterSetAttributes.cc
        DataAlterSetComplexElement.cc
        DataAlterSetElement.cc
        DataAlterSetIntegerElement.cc
        DataAlterSetMatrix.cc
        DataAlterSetRealElement.cc
        DataAlterSetStringElement.cc
        DataAlterSetStylesheet.cc
        DataAlterSetTimestamp.cc
        DataAlterSetVector.cc
        DataAlterWriteJSON.cc
        DataAttributes.cc
        DataCompareResult.cc
        DataComplexElement.cc
        DataComplexValue.cc
        DataContainer.cc
        DataDictionary.cc
        DataDictionaryRoot.cc
        DataDimension.cc
        DataElement.cc
        DataElementMap.cc
        DataEvents.cc
        DataException.cc
        DataGlobals.cc
        DataIndex.cc
        DataIndexList.cc
        DataIndices.cc
        DataIntegerElement.cc
        DataIntegerValue.cc
        DataInx.cc
        DataItem.cc
        DataItemAttr.cc
        DataItemContainer.cc
        DataMatrix.cc
        DataPool.cc
        DataRealElement.cc
        DataRealValue.cc
        DataReference.cc
        DataStringElement.cc
        DataStringValue.cc
        DataStructElement.cc
        DataStructValue.cc
        DataTTrail.cc
        DataTTrailCycleDelete.cc
        DataTTrailCycleNew.cc
        DataTTrailCycleSwitch.cc
        DataTTrailElementList.cc
        DataTTrailItem.cc
        DataTTrailItemList.cc
        DataTTrailPoint.cc
        DataTTrailUndo.cc
        DataTTrailUndoDisable.cc
        DataUserAttr.cc
        DataValue.cc
        DataVector.cc
        )

target_include_directories(datapool
  PRIVATE
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/src
  ${CMAKE_BINARY_DIR}/src)
