
add_subdirectory(qt)

add_library(gui OBJECT
        ConfirmationListener.h
        DataProcessing.cc
        DataProcessing.h
        DialogCompare.cc
        DialogCompare.h
        DialogCopyright.h
        DialogFileSelection.h
        DialogProgressBar.cc
        DialogProgressBar.h
        DialogUserPassword.cc
        DialogUserPassword.h
        DialogWorkClock.cc
        DialogWorkClock.h
        DialogWorker.cc
        DialogWorker.h
        FileSelectListener.h
        GuiLabel.cc
        Gui2dPlot.cc
        Gui2dPlot.h
        Plot2dCurveAttributes.cc
        Plot2dCurveAttributes.h
        Gui3dPlot.cc
        Gui3dPlot.h
        GuiApplHeader.cc
        GuiApplHeader.h
        GuiButtonbar.cc
        GuiButtonbar.h
        GuiButton.cc
        GuiButton.h
        GuiButtonListener.cc
        GuiButtonListener.h
        GuiComboBox.cc
        GuiComboBox.h
        GuiContainer.cc
        GuiContainer.h
        GuiCycleButton.cc
        GuiCycleButton.h
        GuiCycleDialog.cc
        GuiCycleDialog.h
        GuiDataField.cc
        GuiDataField.h
        GuiDialog.cc
        GuiDialog.h
        GuiElement.cc
        GuiElement.h
        GuiEventData.h
        GuiFactory.cc
        GuiFactory.h
        GuiFieldgroup.cc
        GuiFieldgroup.h
        GuiFieldgroupLine.cc
        GuiFieldgroupLine.h
        GuiFilterList.cc
        GuiFilterList.h
        GuiFilterListListener.cc
        GuiFilterListListener.h
        GuiFolder.cc
        GuiFolderGroup.cc
        GuiFolderGroup.h
        GuiFolder.h
        GuiForm.cc
        GuiForm.h
        GuiImage.cc
        GuiImage.h
        GuiIndex.cc
        GuiIndex.h
        GuiIndexListener.h
        GuiIndexMenu.cc
        GuiIndexMenu.h
        GuiLabel.h
        GuiList.cc
        GuiListenerController.cc
        GuiListenerController.h
        GuiListener.h
        GuiList.h
        GuiManager.cc
        GuiManager.h
        GuiMenubar.cc
        GuiMenubar.h
        GuiMenuButton.cc
        GuiMenuButton.h
        GuiMenuButtonListener.cc
        GuiMenuButtonListener.h
        GuiMenuToggle.cc
        GuiMenuToggle.h
        GuiMessageLine.cc
        GuiMessageLine.h
        GuiMFMImageMapper.cc
        GuiMFMImageMapper.h
        GuiNavElement.cc
        GuiNavElement.h
        GuiNavigator.cc
        GuiNavigator.h
        GuiNavigatorMenu.cc
        GuiNavigatorMenu.h
        GuiOrientationContainer.h
        GuiPixmap.cc
        GuiPixmap.h
        GuiPlotDataItem.cc
        GuiPlotDataItem.h
        GuiPopupMenu.h
        GuiPopupMenu.cc
        GuiPrinterDialog.cc
        GuiPrinterDialog.h
        GuiPulldownMenu.cc
        GuiPulldownMenu.h
        GuiRadioButton.cc
        GuiRadioButton.h
        GuiRuler.cc
        GuiRuler.h
        GuiScrolledlistListener.h
        GuiScrolledText.h
        GuiScrolledlist.cc
        GuiScrolledlist.h
        GuiSeparator.h
        GuiSerializableXml.h
        GuiSlider.h
        GuiStretch.h
        GuiTableActionFunctor.h
        GuiTable.cc
        GuiTable.h
        GuiTableItem.h
        GuiTableLine.cc
        GuiTableLine.h
        GuiTextDialogListener.h
        GuiThermo.cc
        GuiThermo.h
        GuiTimeTable.h
        GuiToggleListener.h
        GuiVoid.cc
        GuiVoid.h
        HardCopyTree.cc
        HardCopyTree.h
        IconManager.cc
        IconManager.h
        InformationListener.h
        LineStatistics.cc
        LineStatistics.h
        SimpleAction.h
        Timer.cc
        Timer.h
        TimerTask.h
        UnitManager.cc
        UnitManager.h
        )

if (Protobuf_FOUND)
add_dependencies(gui intens_protobuf)
endif (Protobuf_FOUND)
target_include_directories(gui
        PRIVATE
        gui_qt
        ${PROJECT_SOURCE_DIR}
        ${PROJECT_SOURCE_DIR}/src
        ${CMAKE_BINARY_DIR}/src)

target_link_libraries(gui
  PRIVATE
  LibXml2::LibXml2
  Qt::Core
  Qt::Widgets)

if (Protobuf_FOUND)
target_link_libraries(gui
        PRIVATE
        ${Protobuf_LIBRARIES})
endif()
